# Autonomous_Lakehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agentic_orchestrator.md  alembic.ini  claude-note.md  demo.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
infra/grafana/dashboards/: agent-performance.json  pipeline-health.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/helm/lakehouse-ops/: Chart.yaml  values.yaml
infra/helm/lakehouse-ops/templates/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
infra/prometheus/: prometheus.yml
src/lakehouse/: __init__.py  config.py  database.py  logging.py  policies.py  telemetry.py
src/lakehouse/adapters/: __init__.py  adf.py  base.py  databricks.py  fabric.py  kubeflow.py  mock.py
src/lakehouse/agents/: __init__.py  action_executor.py  chat_ops.py  coordinator.py  cost_optimizer.py  iceberg_quality.py  llm_diagnosis.py  policy_learner.py  quality_coordinator.py  summarizer.py
src/lakehouse/api/: app.py  dependencies.py
src/lakehouse/api/middleware/: __init__.py  auth.py
src/lakehouse/api/routes/: actions.py  chat.py  coordination.py  cost.py  diagnoses.py  events.py  health.py  policy.py  polling.py  quality.py
src/lakehouse/llm/: __init__.py  base.py  claude_provider.py  factory.py  local_provider.py
src/lakehouse/models/: __init__.py  actions.py  audit.py  base.py  cost.py  diagnoses.py  events.py
src/lakehouse/schemas/: actions.py  audit.py  chat.py  coordination.py  cost.py  diagnoses.py  events.py  policy.py  quality.py
src/lakehouse/worker/: __init__.py  tasks.py
tests/: conftest.py  test_action_executor.py  test_actions.py  test_adf_adapter.py  test_auth.py  test_chat_ops.py  test_coordination_api.py  test_coordinator.py  test_cost_api.py  test_cost_optimizer.py  test_databricks_adapter.py  test_events.py  test_execute_endpoint.py  test_fabric_adapter.py  test_health.py  test_iceberg_quality.py  test_kubeflow_adapter.py  test_llm.py  test_policies.py  test_policy_learner.py  test_polling.py  test_quality_api.py  test_quality_coordinator.py  test_telemetry.py
tests/integration/: conftest.py  test_adf_integration.py  test_databricks_integration.py  test_fabric_integration.py  test_kubeflow_integration.py
